<resources>
    <string name="app_name">MyNews</string>

    <!-- Menu Strings -->

    <string name="menu_top_stories_item">Top Stories</string>
    <string name="menu_home_item">Home</string>
    <string name="menu_health_item">Health</string>
    <string name="menu_sports_item">Sports</string>
    <string name="menu_business_item">Business</string>
    <string name="menu_most_popular_item">Most Popular</string>
    <string name="menu_configuration_item">Configuration</string>
    <string name="menu_profile_item">Profile</string>
    <string name="menu_settings_item">Settings</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="app_label">app_label</string>
    <string name="search_hint">Search query term</string>
    <string name="datePicker_begin_date">Begin Date</string>
    <string name="datePicker_end_date">End Date</string>
    <string name="search_button">Search</string>
    <string name="switch_notification">Enable notifications (once per day)</string>
    <string name="noResult_title">Sorry, it seems that no articles correspond to your search</string>
    <string name="noResult_subtitle">You should try with another search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
